--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="{% static 'myapp/style.css' %}">
+    <link rel="stylesheet" href="{% static 'myapp/styles.css' %}">
 </head>
-<body>
+<body class="bg-sky-500">
 <h1>Index page</h1>
 
 {% for p in products %}
