--- a/myapp/templates/myapp/detail.html
+++ b/myapp/templates/myapp/detail.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>Detail product</h1>
+{% extends 'base.html' %}
+
+{% block content %}
 
 <p>{{ product.title }}</p>
 <p>{{ product.price }}</p>
 <p>{{ product.description }}</p>
 
-</body>
-</html>
+{% endblock %}
